--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,6 +43,8 @@
 .flip-card-front {
   background-color: #b6e6ff;
   color: black;
+
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 /* Style the back side */
@@ -50,4 +52,33 @@
   background-color: #ffb6c1;
   color: white;
   transform: rotateY(180deg);
+
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+
+  /*background-image: url('https://github.com/some1awesome/animal-memory/blob/master/src/assets/adults.png?raw=true');*/
+  background-size: 400%;
+}
+
+.refresh {
+  background-color: green;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 36px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: 0.3s;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+.refresh:focus {
+  transform: scale(1.1);
+  transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
